<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".clases.TiendasActivity"
    tools:showIn="@layout/activity_tiendas">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin"
            android:layout_marginStart="@dimen/common_margin"
            android:layout_marginEnd="@dimen/common_margin"
            android:padding="@dimen/common_padding"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/common_padding"
                android:paddingStart="@dimen/common_padding"
                android:paddingEnd="@dimen/common_padding"
                android:paddingBottom="@dimen/common_padding"
                android:background="@color/v_50"
                >

                <TextView
                    android:id="@+id/tv_tituloTiendas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/tituloTiendas"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin"
            android:layout_marginStart="@dimen/common_margin"
            android:layout_marginEnd="@dimen/common_margin"
            android:padding="@dimen/common_padding"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/common_padding"
                android:paddingStart="@dimen/common_padding"
                android:paddingEnd="@dimen/common_padding"
                android:paddingBottom="@dimen/common_padding"
                android:background="@color/n_50"
                >

                <TextView
                    android:id="@+id/tv_nomTienda1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/nombreTienda1"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                    />

                <TextView
                    android:id="@+id/tv_desTienda1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_nomTienda1"
                    android:text="@string/desTienda1"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin"
            android:layout_marginStart="@dimen/common_margin"
            android:layout_marginEnd="@dimen/common_margin"
            android:padding="@dimen/common_padding"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/common_padding"
                android:paddingStart="@dimen/common_padding"
                android:paddingEnd="@dimen/common_padding"
                android:paddingBottom="@dimen/common_padding"
                android:background="@color/n_50"
                >

                <TextView
                    android:id="@+id/tv_nomTienda2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/nombreTienda2"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                    />

                <TextView
                    android:id="@+id/tv_desTienda2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_nomTienda2"
                    android:text="@string/desTienda2"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin"
            android:layout_marginStart="@dimen/common_margin"
            android:layout_marginEnd="@dimen/common_margin"
            android:padding="@dimen/common_padding"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/common_padding"
                android:paddingStart="@dimen/common_padding"
                android:paddingEnd="@dimen/common_padding"
                android:paddingBottom="@dimen/common_padding"
                android:background="@color/n_50"
                >

                <TextView
                    android:id="@+id/tv_nomTienda3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/nombreTienda3"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                    />

                <TextView
                    android:id="@+id/tv_desTienda3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_nomTienda3"
                    android:text="@string/desTienda3"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin"
            android:layout_marginStart="@dimen/common_margin"
            android:layout_marginEnd="@dimen/common_margin"
            android:padding="@dimen/common_padding"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/common_padding"
                android:paddingStart="@dimen/common_padding"
                android:paddingEnd="@dimen/common_padding"
                android:paddingBottom="@dimen/common_padding"
                android:background="@color/n_50"
                >

                <TextView
                    android:id="@+id/tv_nomTienda4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/nombreTienda4"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                    />

                <TextView
                    android:id="@+id/tv_desTienda4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_nomTienda4"
                    android:text="@string/desTienda4"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>